	 AY data port on the +2A/+3 is the same as reading from the
         register port (thanks, Mark Woodmass).
20081117 configure.in: bump version number for 0.10.0-pre1 release
	 (Release_0_10_0-branch).
20081118 rzx.c: don't autosave rzx snapshots when we are recording in compo
         mode (Fred).
20081119 disk/{disk.c,upd_fdc.c}: fix READ_DIAG emlation bugs to support
         LERM Plus-3-Mate (fixes bug #2312217) (Gergely Szasz).
20081120 compat/amiga/paths.c: implement compat_is_absolute_path for Amiga
         (final part of patch #1712260) (Chris Young).
20081120 utils.c: don't switch machine on autoloading a Timex dock cart if we
         can already support them (Fred).
20081122 disk/disk.c: fix a track length calculation bug (more of bug #2312217)
         (Gergely Szasz).
20081125 scld.c: fix loading of dock/exrom information from snapshots (Fred).
20081129 disk/disk.c: limit weak sector handling to fix Coin-Op Hits (more of
         bug #2312217) (Gergely Szasz).
20081129 disk/disk.c: one instance of plus3_fix wasn't updated (thanks, Stuart
         Brady) (Fred).
20081129 configure.in,man/fuse.1,README: final tweaks for 0.10.0 release
	 (Release_0_10_0-branch).
20081201 fuse.c: update libspectrum version needed (Release_0_10_0-branch).
20081202 ui/gtk/debugger.c: begin replacing the deprecated GtkCList interface
	 with GtkTreeView/GtkTreeModel.
20081203 configure.in,fuse.c,hacking/{ChangeLog,Makefile.am},Makefile.am,
	 man/fuse.1,README,ui/win32/Makefile.am: merge Release_0_10_0-branch
	 changes onto trunk.
20081206 ui/fb/Makefile.am: distribute fbmouse.h (thanks, rkd77) (Fred).
20081210 Makefile.am,compat/unix/file.c: must open files for writing with
         O_TRUNC to ensure that any old data is cleared out. Also fix a
         dependency problem (thanks, Matthew Westcott).
20081210 ChangeLog,configure.in,man/fuse.1,README: update for 0.10.0.1 release.
20081210 ui/gtk/debugger.c: final bit of GtkCList removal from this file.